Implemented frontend connectivity